--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "mongodb": "^5.6.0",
+    "react-router-dom": "^6.13.0",
+    "sort-by": "^0.0.2"
   }
 }
